--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
 <footer>
     <p class="attribution">
-        Powered by ABC Team
+        {{footer_title}}
     </p>
 </footer>
 
@@ -23,3 +23,4 @@
 <!-- LOGUEARSE EN FIREBASE: firebase login -->
 <!-- AGREGAR FIREBASE AL PROYECTO: ng add @angular/fire -->
 <!-- INSTALAR FIREBASE: npm install --save firebase -->
+<!-- INSTALAR STEPPER PARA BOOSTRAP: npm install bs-stepper --save -->
