--- a/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
@@ -6,12 +6,12 @@
             <div class="col-sm-10">
                 <p></p>
             </div>
-            <div class="col-sm-2">
-                <button style="background-color: hsl(180, 62%, 55%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
-            </div>
+
         </div>
     </div>
-
+    <div class="col-sm-2">
+        <button style="background-color: hsl(180, 62%, 55%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+    </div>
     <div class="row1-container" *ngFor="let item of collection">
         <div class="box cyan">
             <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
@@ -37,7 +37,7 @@
 
 <ng-template #content let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Estudiante create/update</h4>
+        <h4 class="modal-title" id="modal-basic-title">Crear Pregunta</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
