--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
@@ -110,10 +110,10 @@
     <div class="row1-container" *ngFor="let i of collection">
         <div class="box orange">
             <img src="https://assets.codepen.io/2301174/icon-karma.svg" alt="">
-            <h4> Pregunta - {{i.indice}}</h4>
+            <h4> Tema - {{i.indice}}</h4>
             <h2>{{i.subtema}}</h2>
-            <p>Incluye: Contar hacia delante y hacia atrás: hasta 100|Trucos de suma: sumas hasta 10|Hallar un número usando sumas: sumas hasta 10|Completar la suma: sumas hasta 10</p>
-            <p class="card__apply"><a>Ver las competencias<i class="fa fa-edit"></i></a></p>
+            <p>Sumas hasta {{i.indice}}</p>
+            <p class="card__apply" (click)="navigateCursos(i.id)"><a>Ver las Preguntas<i class="fa fa-edit"></i></a></p>
         </div>
     </div>
 </div>
